# nova-ugens

./: .gitmodules  CMakeLists.txt  ESInterleaver.cpp  FeedbackAM.cpp  NovaDiskIO.cpp  NovaFB.cpp  NovaGendy.cpp  NovaMulAddUGenHelper.hpp  NovaOsc.cpp  NovaOsc.cpp.orig  NovaPeakMeter.cpp  NovaRMFilters.cpp  NovaTanhShaper.cpp  NovaUtils.hpp  sc-plugin-builder.cmake
sc/: NovaDiskIOUGens.sc  NovaPeakMeter.sc  NovaRMFilters.sc  NovaTanhShaper.sc  NovaUGens.sc
